--- a/__03_component_state_lifecycle/e1_student/package.json
+++ b/__03_component_state_lifecycle/e1_student/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "test",
+  "name": "exercise",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "14": "^3.1.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
