--- a/__05_form_router/e1_form_contact/package.json
+++ b/__05_form_router/e1_form_contact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercise",
+  "name": "e1_form_contact",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "yup": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
